fix: h3 too small font size
Size was smaller than text (1rem to 1.25rem).

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,9 +44,9 @@ h2 {
 
 h3 {
   color: $primary !important;
-  font-size: $font-size-small-mobile !important;
+  font-size: $font-size-medium-mobile !important;
   @include media-breakpoint-up(lg) {
-    font-size: $font-size-small !important;
+    font-size: $font-size-medium !important;
   }
 }
 
